--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=61.0", "wheel"]
+requires = ["setuptools>=70.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -10,14 +10,16 @@ readme = "README.md"
 license = {text = "MIT"}
 requires-python = ">=3.8"
 authors = [
-    {name = "Francesco Correnti"}
+    {name = "Francesco Correnti", email = "fcorrenti2000@gmail.com"}
+]
+maintainers = [
+    {name = "Francesco Correnti", email = "fcorrenti2000@gmail.com"}
 ]
 keywords = ["machine-learning", "experiment-management", "hyperparameter-sweep", "mlops"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
     "Intended Audience :: Science/Research",
-    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
